# Bridge-Solver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  alpha_mu_trace.txt  build-wasm.ps1  build.ps1  dump.txt
.github/workflows/: deploy-pages.yml
docs/: Example Hands.txt  Next prompt.txt  alpha-mu-optimizations.md  alpha-mu-second-paper-results.md  alpha-mu.md  alpha-mu2.md  alpha_mu2_6s_example.md  alpha_mu2_forced_prefix_report.md  alpha_mu_7nt_adaptive_5s_batch_10.md  alpha_mu_7nt_m3_batch_10.txt  alpha_mu_7nt_m4_batch_10.txt  architecture.md  bridge-mechanics.md  dtac-claim.md  quick-tricks.md  web-architecture.md
engine/: CMakeLists.txt
engine/include/bridge/: alpha_mu.h  alpha_mu2.h  analysis_session.h  card.h  claim.h  dds_solver.h  engine.h  game.h  quick_tricks.h
engine/src/: alpha_mu.cpp  alpha_mu2.cpp  alpha_mu2_report.cpp  alpha_mu_internal.h  alpha_mu_pareto.cpp  alpha_mu_policy.cpp  alpha_mu_state.cpp  analysis_session.cpp  card.cpp  claim.cpp  dds_solver.cpp  engine.cpp  game.cpp  interactive_cli.cpp  interactive_cli.h  main.cpp  playthrough_demo.cpp  playthrough_demo.h  quick_tricks.cpp  wasm_bindings.cpp
engine/tests/: engine_tests.cpp
tmp/: am2_forced_prefix_raw.json  am2_forced_prefix_round0_raw.json
tmp/pdfs/: optimising-alpha-mu.txt
website/: app.js  build.js  deal-utils.js  deal-utils.test.mjs  engine-client.js  engine-worker.js  index.html  package.json  server.js  storage.js  styles.css  ui-smoke.mjs  wasm-smoke.mjs
